--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 			        <div class="container">
 			            <div class="row">
 			                <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-			                	<h1 class="wow fadeIn">Bootstrap 4 Template with <strong>Sidebar Menu</strong></h1>
+								<img src="assets/img/logoess.png" alt="logo"></div>
+			                	<h1 class="wow fadeIn"><strong>Erotika</strong> Sexy Store</h1>
 			                	<div class="description wow fadeInLeft">
 			                		<p>
 			                			A template with Sidebar Menu made with the Bootstrap 4 framework. Download the template or learn how to create it, step by step, on 
