--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
 
     <body>
 
+		
+
 		<!-- Wrapper -->
     	<div class="wrapper">
+			<!-- search bar -->
+			<div class="topnav">
+				<a class="active" href="#home">Home</a>
+				<a href="#about">About</a>
+				<a href="#contact">Contact</a>
+				<input type="text" placeholder="Search..">
+		  	</div>
 
 			<!-- Sidebar -->
 			<nav class="sidebar">
@@ -105,8 +114,8 @@
 			        <div class="container">
 			            <div class="row">
 			                <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-								<img src="assets/img/logoess.png" alt="logo"></div>
-			                	<h1 class="wow fadeIn"><strong>Erotika</strong> Sexy Store</h1>
+								<img src="assets/img/logoe.png" alt="logo"></div>
+			                	<!--<h1 class="wow fadeIn"><strong>Erotika</strong> Sexy Store</h1>-->
 			                	<div class="description wow fadeInLeft">
 			                		<p>
 			                			A template with Sidebar Menu made with the Bootstrap 4 framework. Download the template or learn how to create it, step by step, on 
